# FinalWorkOfSkillboxCourse

./: README.md
SearchEngine/: CMakeLists.txt  Подключение Google Test к проекту.txt  Подключение JSON к проекту.txt
SearchEngine/include/: converterJSON.h  invertedIndex.h  searchServer.h
SearchEngine/json/: answers.json  config.json  requests.json
SearchEngine/resources/: file019.txt
SearchEngine/src/: CMakeLists.txt  converterJSON.cpp  invertedIndex.cpp  mainProject.cpp  searchServer.cpp
SearchEngine/tests/: CMakeLists.txt  test_1.cpp
